--- a/source/index.html
+++ b/source/index.html
@@ -134,21 +134,17 @@
           </div>
         </div>
       </section>
-
-      <section class="cooperation">
-        <div class="cooperation__wrapper">
-          <div class="cooperation__info">
-            <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
-            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-          </div>
-          <iframe src="https://goo.gl/maps/6qNikbR2V9tpYwot6" width="" height="">
-          </iframe>
-        </div>
-      </section>
     </main>
 
     <footer class="main-footer">
       <div class="main-footer__wrapper">
+        <div class="cooperation">
+          <div class="cooperation__info cooperation__info--index">
+            <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
+            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+          </div>
+        </div>
+
         <div class="main-footer__company company">
           <img class="company__image company-logo" src="#" width="" height="" alt="Имя компании">
         </div>
