:heavy_check_mark: Сборка #2

--- a/2/catalog.html
+++ b/2/catalog.html
@@ -40,116 +40,116 @@
           <h1 class="catalog__title">Каталог продукции</h1>
           <h2 class="visually-hidden">Список товаров</h2>
           <ul class="catalog__product-list">
-            <li class="catalog__item">
-              <img class="catalog__product-picture catalog__product-picture--image" src="" width="" height="" alt="Куринный корм 500 грамм.">
-              <h3 class="catalog__product-name">Cat Energy PRO 500 г</h3>
+            <li class="product">
+              <img class="product__picture product__picture--image" src="" width="" height="" alt="Куринный корм 500 грамм.">
+              <h3 class="product__name">Cat Energy PRO 500 г</h3>
 
-              <dt class="catalog__product-description">Масса</dt>
-              <dd class="catalog__product-value">500 г</dd>
+              <dt class="product__description">Масса</dt>
+              <dd class="product__value">500 г</dd>
 
-              <dt class="catalog__product-description">Вкус</dt>
-              <dd class="catalog__product-value">Курица</dd>
+              <dt class="product__description">Вкус</dt>
+              <dd class="product__value">Курица</dd>
 
-              <dt class="catalog__product-description">Цена</dt>
-              <dd class="catalog__product-value">700 Р.</dd>
+              <dt class="product__description">Цена</dt>
+              <dd class="product__value">700 Р.</dd>
 
-              <a class="button catalog__order">Заказать</a>
+              <a class="button product__order">Заказать</a>
             </li>
 
-            <li class="catalog__item">
-              <img class="catalog__product-picture catalog__product-picture--image" src="" width="" height="" alt="Куринный корм 1000 грамм.">
-              <h3 class="catalog__product-name">Cat Energy PRO 1000 г</h3>
+            <li class="product">
+              <img class="product__picture product__picture--image" src="" width="" height="" alt="Куринный корм 1000 грамм.">
+              <h3 class="product__name">Cat Energy PRO 1000 г</h3>
 
-              <dt class="catalog__product-description">Масса</dt>
-              <dd class="catalog__product-value">1000 г</dd>
+              <dt class="product__description">Масса</dt>
+              <dd class="product__value">1000 г</dd>
 
-              <dt class="catalog__product-description">Вкус</dt>
-              <dd class="catalog__product-value">Курица</dd>
+              <dt class="product__description">Вкус</dt>
+              <dd class="product__value">Курица</dd>
 
-              <dt class="catalog__product-description">Цена</dt>
-              <dd class="catalog__product-value">1000 Р.</dd>
+              <dt class="product__description">Цена</dt>
+              <dd class="product__value">1000 Р.</dd>
 
-              <a class="button catalog__order">Заказать</a>
+              <a class="button product__order">Заказать</a>
             </li>
 
-            <li class="catalog__item">
-              <img class="catalog__product-picture catalog__product-picture--image" src="" width="" height="" alt="Рыбный корм 500 грамм.">
-              <h3 class="catalog__product-name">Cat Energy PRO 500 г</h3>
+            <li class="product">
+              <img class="product__picture product__picture--image" src="" width="" height="" alt="Рыбный корм 500 грамм.">
+              <h3 class="product__name">Cat Energy PRO 500 г</h3>
 
-              <dt class="catalog__product-description">Масса</dt>
-              <dd class="catalog__product-value">500 г</dd>
+              <dt class="product__description">Масса</dt>
+              <dd class="product__value">500 г</dd>
 
-              <dt class="catalog__product-description">Вкус</dt>
-              <dd class="catalog__product-value">Рыба</dd>
+              <dt class="product__description">Вкус</dt>
+              <dd class="product__value">Рыба</dd>
 
-              <dt class="catalog__product-description">Цена</dt>
-              <dd class="catalog__product-value">700 Р.</dd>
+              <dt class="product__description">Цена</dt>
+              <dd class="product__value">700 Р.</dd>
 
-              <a class="button catalog__order">Заказать</a>
+              <a class="button product__order">Заказать</a>
             </li>
 
-            <li class="catalog__item">
-              <img class="catalog__product-picture catalog__product-picture--image" src="" width="" height="" alt="Рыбный корм 1000 грамм.">
-              <h3 class="catalog__product-name">Cat Energy PRO 1000 г</h3>
+            <li class="product">
+              <img class="product__picture product__picture--image" src="" width="" height="" alt="Рыбный корм 1000 грамм.">
+              <h3 class="product__name">Cat Energy PRO 1000 г</h3>
 
-              <dt class="catalog__product-description">Масса</dt>
-              <dd class="catalog__product-value">1000 г</dd>
+              <dt class="product__description">Масса</dt>
+              <dd class="product__value">1000 г</dd>
 
-              <dt class="catalog__product-description">Вкус</dt>
-              <dd class="catalog__product-value">Рыба</dd>
+              <dt class="product__description">Вкус</dt>
+              <dd class="product__value">Рыба</dd>
 
-              <dt class="catalog__product-description">Цена</dt>
-              <dd class="catalog__product-value">1000 Р.</dd>
+              <dt class="product__description">Цена</dt>
+              <dd class="product__value">1000 Р.</dd>
 
-              <a class="button catalog__order">Заказать</a>
+              <a class="button product__order">Заказать</a>
             </li>
 
-            <li class="catalog__item">
-              <img class="catalog__product-picture catalog__product-picture--image" src="" width="" height="" alt="Гречневый корм 500 грамм.">
-              <h3 class="catalog__product-name">Cat Energy slim 500 г</h3>
+            <li class="product">
+              <img class="product__picture product__picture--image" src="" width="" height="" alt="Гречневый корм 500 грамм.">
+              <h3 class="product__name">Cat Energy slim 500 г</h3>
 
-              <dt class="catalog__product-description">Масса</dt>
-              <dd class="catalog__product-value">500 г</dd>
+              <dt class="product__description">Масса</dt>
+              <dd class="product__value">500 г</dd>
 
-              <dt class="catalog__product-description">Вкус</dt>
-              <dd class="catalog__product-value">Гречка</dd>
+              <dt class="product__description">Вкус</dt>
+              <dd class="product__value">Гречка</dd>
 
-              <dt class="catalog__product-description">Цена</dt>
-              <dd class="catalog__product-value">400 Р.</dd>
+              <dt class="product__description">Цена</dt>
+              <dd class="product__value">400 Р.</dd>
 
-              <a class="button catalog__order">Заказать</a>
+              <a class="button product__order">Заказать</a>
             </li>
 
-            <li class="catalog__item">
-              <img class="catalog__product-picture catalog__product-picture--image" src="" width="" height="" alt="Гречневый корм 1000 грамм.">
-              <h3 class="catalog__product-name">Cat Energy slim 1000 г</h3>
+            <li class="product">
+              <img class="product__picture product__picture--image" src="" width="" height="" alt="Гречневый корм 1000 грамм.">
+              <h3 class="product__name">Cat Energy slim 1000 г</h3>
 
-              <dt class="catalog__product-description">Масса</dt>
-              <dd class="catalog__product-value">1000 г</dd>
+              <dt class="product__description">Масса</dt>
+              <dd class="product__value">1000 г</dd>
 
-              <dt class="catalog__product-description">Вкус</dt>
-              <dd class="catalog__product-value">Гречка</dd>
+              <dt class="product__description">Вкус</dt>
+              <dd class="product__value">Гречка</dd>
 
-              <dt class="catalog__product-description">Цена</dt>
-              <dd class="catalog__product-value">700 Р.</dd>
+              <dt class="product__description">Цена</dt>
+              <dd class="product__value">700 Р.</dd>
 
-              <a class="button catalog__order">Заказать</a>
+              <a class="button product__order">Заказать</a>
             </li>
 
-            <li class="catalog__item">
-              <img class="catalog__product-picture catalog__product-picture--image" src="" width="" height="" alt="Рисовый корм 500 грамм.">
-              <h3 class="catalog__product-name">Cat Energy slim 500 г</h3>
+            <li class="product">
+              <img class="product__picture product__picture--image" src="" width="" height="" alt="Рисовый корм 500 грамм.">
+              <h3 class="product__name">Cat Energy slim 500 г</h3>
 
-              <dt class="catalog__product-description">Масса</dt>
-              <dd class="catalog__product-value">500 г</dd>
+              <dt class="product__description">Масса</dt>
+              <dd class="product__value">500 г</dd>
 
-              <dt class="catalog__product-description">Вкус</dt>
-              <dd class="catalog__product-value">Рис</dd>
+              <dt class="product__description">Вкус</dt>
+              <dd class="product__value">Рис</dd>
 
-              <dt class="catalog__product-description">Цена</dt>
-              <dd class="catalog__product-value">500 Р.</dd>
+              <dt class="product__description">Цена</dt>
+              <dd class="product__value">500 Р.</dd>
 
-              <a class="button catalog__order">Заказать</a>
+              <a class="button product__order">Заказать</a>
             </li>
           </ul>
 
@@ -159,40 +159,40 @@
         </div>
       </section>
 
-      <section class="editional-catalog">
-        <div class="editional-catalog__wrapper">
-          <h2 class="editional-catalog__title">Дополнительные товары</h2>
-          <ul class="editional-catalog__list">
-            <li class="editional-catalog__item">
-              <h3 class="editional-catalog__product-name">Сахарозаменитель</h3>
-              <dt class="editional-catalog__product-volume">1 упаковка (100 г)</dt>
-              <dd class="editional-catalog__cost">200 Р.</dd>
+      <section class="catalog-edditional">
+        <div class="catalog-edditional__wrapper">
+          <h2 class="catalog-edditional__title">Дополнительные товары</h2>
+          <ul class="catalog-edditional__list">
+            <li class="product-editional">
+              <h3 class="product-editional__name">Сахарозаменитель</h3>
+              <dt class="product-editional__volume">1 упаковка (100 г)</dt>
+              <dd class="product-editional__cost">200 Р.</dd>
 
-              <a class="button editional-catalog__order">Заказать</a>
+              <a class="button product-editional__order">Заказать</a>
             </li>
 
-            <li class="editional-catalog__item">
-              <h3 class="editional-catalog__product-name">питьевая вода</h3>
-              <dt class="editional-catalog__product-volume">5 литров</dt>
-              <dd class="editional-catalog__cost">50 Р.</dd>
+            <li class="product-editional">
+              <h3 class="product-editional__name">питьевая вода</h3>
+              <dt class="product-editional__volume">5 литров</dt>
+              <dd class="product-editional__cost">50 Р.</dd>
 
-              <a class="button editional-catalog__order">Заказать</a>
+              <a class="button product-editional__order">Заказать</a>
             </li>
 
-            <li class="editional-catalog__item">
-              <h3 class="editional-catalog__product-name">молоко</h3>
-              <dt class="editional-catalog__product-volume">1 литр</dt>
-              <dd class="editional-catalog__cost">100 Р.</dd>
+            <li class="product-editional">
+              <h3 class="product-editional__name">молоко</h3>
+              <dt class="product-editional__volume">1 литр</dt>
+              <dd class="product-editional__cost">100 Р.</dd>
 
-              <a class="button editional-catalog__order">Заказать</a>
+              <a class="button product-editional__order">Заказать</a>
             </li>
 
-            <li class="editional-catalog__item">
-              <h3 class="editional-catalog__product-name">витамины</h3>
-              <dt class="editional-catalog__product-volume">1 упаковка (30 г)</dt>
-              <dd class="editional-catalog__cost">300 Р.</dd>
+            <li class="product-editional">
+              <h3 class="product-editional__name">витамины</h3>
+              <dt class="product-editional__volume">1 упаковка (30 г)</dt>
+              <dd class="product-editional__cost">300 Р.</dd>
 
-              <a class="button editional-catalog__order">Заказать</a>
+              <a class="button product-editional__order">Заказать</a>
             </li>
           </ul>
         </div>
@@ -200,7 +200,7 @@
 
       <section class="present">
         <h2 class="visually-hidden">Подарки.</h2>
-        <div class="present-wrapper">
+        <div class="present__wrapper">
           <svg class="present__icon" aria-label="Иконка подарка."></svg>
           <p class="present__description">Закажите все и получите чехол для кота в подарок!</p>
         </div>
@@ -209,6 +209,13 @@
 
     <footer class="main-footer">
       <div class="main-footer__wrapper">
+        <div class="cooperation">
+          <div class="cooperation__info">
+            <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
+            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+          </div>
+        </div>
+
         <div class="main-footer__company company">
           <img class="company__image company-logo" src="#" width="" height="" alt="Имя компании">
         </div>
@@ -231,8 +238,8 @@
 
         <div class="main-footer__html-academy html-academy">
           <a class="html-academy__link" href="">HTML Academy</a>
-          <a class="html-academy__logo" src="" href="">
-            <img src="" width="" height="" alt="Логотип HTML-Academy.">
+          <a class="html-academy__logo" href="">
+            <img src="#" width="" height="" alt="Логотип HTML-Academy.">
           </a>
         </div>
       </div>
