--- a/source/form.html
+++ b/source/form.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
-  <body class="page_body">
+  <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo">
+      <a class="main-header__logo" href="#">
         <img class="main-header__logo-image" src="#" width="" height="" alt="Логотип Кэт энерджи">
       </a>
 
       <img class="main-header__company-image company-logo" src="#" width="" height="" alt="Имя компании">
 
-      <nav class="main-nav">
-        <button class="main-nav__toggle">
+      <nav class="main-header__navigation navigation">
+        <button class="navigation__toggle">
           <span class="visually-hidden">Открыть меню</span>
         </button>
 
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
+        <div class="navigation__wrapper">
+          <ul class="navigation__list site-list">
             <li class="site-list__item site-list__item--current">
               <a>Главная</a>
             </li>
@@ -39,8 +40,8 @@
           <h1 class="select-program__title">Подбор программы</h1>
           <p class="select-program__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
-          <form action="https://echo.htmlacademy.ru" class="select-program__form" method="post">
-            <fieldset class="form-info">
+          <form class="select-program__form" action="https://echo.htmlacademy.ru" method="post">
+            <fieldset class="select-program__form-info form-info">
               <legend class="visually-hidden"> Информация о котике.</legend>
               <ul class="form-info__list">
                 <li class="form-info__item">
@@ -63,7 +64,7 @@
               </ul>
             </fieldset>
 
-            <fieldset class="form-radio">
+            <fieldset class="select-program__form-radio form-radio">
               <legend class="visually-hidden">Цель.</legend>
               <ul class="form-radio__list">
                 <li class="form-radio__item">
@@ -92,7 +93,7 @@
               </ul>
             </fieldset>
 
-            <fieldset class="form-cotacts">
+            <fieldset class="select-program__form-cotacts form-cotacts">
               <legend class="form-cotacts__title">Контактные данные (владельца кота)</legend>
               <ul class="form-cotacts__list">
                 <li class="form-cotacts__item">
@@ -109,13 +110,13 @@
               </ul>
             </fieldset>
 
-            <fieldset class="form-comment">
+            <fieldset class="select-program__form-comment form-comment">
               <legend class="form-comment__title">Комментарий</legend>
               <label class="visually-hidden" for="comment">Комментарий.</label>
               <textarea class="form-comment__text-area" placeholder="Расскажите обо всех повАдках кота" id="comment" name="comment"></textarea>
             </fieldset>
 
-            <fieldset class="form-checkbox">
+            <fieldset class="select-program__form-checkbox form-checkbox">
               <legend class="form-checkbox__title">Дополнительно</legend>
 
               <ul class="form-checkbox__list">
@@ -148,7 +149,8 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="button--send-application button">отправить заявку</button>
+
+            <button class="select-program__button button button--send-application">отправить заявку</button>
             <p class="select-program__remark">* — Обязательные поля</p>
           </form>
         </div>
@@ -157,7 +159,7 @@
 
     <footer class="main-footer">
       <div class="main-footer__wrapper">
-        <div class="cooperation">
+        <div class="main-footer__cooperation cooperation">
           <div class="cooperation__info">
             <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
             <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
@@ -171,22 +173,22 @@
         <div class="main-footer__social social">
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--vk" href=""></a>
+              <a class="social__link social__link--vk" href="#"></a>
             </li>
 
             <li class="social__item">
-              <a class="social__link social__link--youtube" href=""></a>
+              <a class="social__link social__link--youtube" href="#"></a>
             </li>
 
             <li class="social__item">
-              <a class="social__link social__link--telegram" href=""></a>
+              <a class="social__link social__link--telegram" href="#"></a>
             </li>
           </ul>
         </div>
 
         <div class="main-footer__html-academy html-academy">
-          <a class="html-academy__link" href="">HTML Academy</a>
-          <a class="html-academy__logo" href="">
+          <a class="html-academy__link" href="#">HTML Academy</a>
+          <a class="html-academy__logo" href="#">
             <img src="#" width="" height="" alt="Логотип HTML-Academy.">
           </a>
         </div>
